refactor: Update dependency injection, add nullability annotations, refine cell transformation logic, and introduce validation starter.